src/test/ui/feature-gates/feature-gate-const_generics-fn.rs
fn foo<const X: ()>() {} //~ ERROR const generics are unstable

fn main() {}
